{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 31,
  "lineage": "7180ac98-350f-34ae-a132-af54403df9ce",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NatGateway1EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-035d491dfa9018cf4",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-195-214-222.compute-1.amazonaws.com",
            "public_ip": "44.195.214.222",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NatGateway2EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-09a21c06691b747fa",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-230-112-108.compute-1.amazonaws.com",
            "public_ip": "3.230.112.108",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356933967075:internet-gateway/igw-046d00a6c51744600",
            "id": "igw-046d00a6c51744600",
            "owner_id": "356933967075",
            "tags": {
              "Name": "Petclinic"
            },
            "tags_all": {
              "Name": "Petclinic"
            },
            "vpc_id": "vpc-04c3b495832c44693"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NatGateway1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-035d491dfa9018cf4",
            "connectivity_type": "public",
            "id": "nat-0d368a77584d58f8a",
            "network_interface_id": "eni-019960ce62f1ec4ae",
            "private_ip": "10.0.10.202",
            "public_ip": "44.195.214.222",
            "subnet_id": "subnet-0df86c6432ab2d41f"
          },
          "dependencies": [
            "aws_eip.NatGateway1EIP",
            "aws_internet_gateway.igw",
            "aws_subnet.PublicSubnet1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NatGateway2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09a21c06691b747fa",
            "connectivity_type": "public",
            "id": "nat-091202236de121a55",
            "network_interface_id": "eni-04787bad9b83a217c",
            "private_ip": "10.0.11.155",
            "public_ip": "3.230.112.108",
            "subnet_id": "subnet-0e51df15c94ab90f4"
          },
          "dependencies": [
            "aws_eip.NatGateway2EIP",
            "aws_internet_gateway.igw",
            "aws_subnet.PublicSubnet2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "DefaultPrivateRoute1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f7f7aaeee24ebcb71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d368a77584d58f8a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f7f7aaeee24ebcb7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NatGateway1EIP",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.NatGateway1",
            "aws_route_table.PrivateRouteTable1",
            "aws_subnet.PublicSubnet1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "DefaultPrivateRoute2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-004c12c4fb94f2f061080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-091202236de121a55",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-004c12c4fb94f2f06",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NatGateway2EIP",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.NatGateway2",
            "aws_route_table.PrivateRouteTable2",
            "aws_subnet.PublicSubnet2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "DefaultPublicRoute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-046d00a6c51744600",
            "id": "r-rtb-09f9af6242d00b3331080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09f9af6242d00b333",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.PublicRouteTable",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRouteTable1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356933967075:route-table/rtb-0f7f7aaeee24ebcb7",
            "id": "rtb-0f7f7aaeee24ebcb7",
            "owner_id": "356933967075",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Petclinic Private Routes (AZ1)"
            },
            "tags_all": {
              "Name": "Petclinic Private Routes (AZ1)"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c3b495832c44693"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRouteTable2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356933967075:route-table/rtb-004c12c4fb94f2f06",
            "id": "rtb-004c12c4fb94f2f06",
            "owner_id": "356933967075",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Petclinic Private Routes (AZ2)"
            },
            "tags_all": {
              "Name": "Petclinic Private Routes (AZ2)"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c3b495832c44693"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356933967075:route-table/rtb-09f9af6242d00b333",
            "id": "rtb-09f9af6242d00b333",
            "owner_id": "356933967075",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Petclinic Public Routes"
            },
            "tags_all": {
              "Name": "Petclinic Public Routes"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c3b495832c44693"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateSubnet1RouteTableAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0805f84ebdb720fc8",
            "route_table_id": "rtb-0f7f7aaeee24ebcb7",
            "subnet_id": "subnet-0518426b876082d64"
          },
          "dependencies": [
            "aws_route_table.PrivateRouteTable1",
            "aws_subnet.PrivateSubnet1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateSubnet2RouteTableAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03af988b9f0b79c3a",
            "route_table_id": "rtb-004c12c4fb94f2f06",
            "subnet_id": "subnet-0d4ec10fcc21b8040"
          },
          "dependencies": [
            "aws_route_table.PrivateRouteTable2",
            "aws_subnet.PrivateSubnet2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicSubnet1RouteTableAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05541df194c399e93",
            "route_table_id": "rtb-09f9af6242d00b333",
            "subnet_id": "subnet-0df86c6432ab2d41f"
          },
          "dependencies": [
            "aws_route_table.PublicRouteTable",
            "aws_subnet.PublicSubnet1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicSubnet2RouteTableAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01258b41abf3a3ba2",
            "route_table_id": "rtb-09f9af6242d00b333",
            "subnet_id": "subnet-0e51df15c94ab90f4"
          },
          "dependencies": [
            "aws_route_table.PublicRouteTable",
            "aws_subnet.PublicSubnet2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ECSHostSecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356933967075:security-group/sg-0bc3410413a062284",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bc3410413a062284",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0f477accb97006849"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20211013073610306500000003",
            "name_prefix": "terraform-",
            "owner_id": "356933967075",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04c3b495832c44693"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.LoadBalancerSecurityGroup",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "LoadBalancerSecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356933967075:security-group/sg-0f477accb97006849",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f477accb97006849",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "356933967075",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04c3b495832c44693"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356933967075:subnet/subnet-0518426b876082d64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.20.0/24",
            "id": "subnet-0518426b876082d64",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "356933967075",
            "tags": {
              "Name": "Petclinic Private Subnet (AZ1)"
            },
            "tags_all": {
              "Name": "Petclinic Private Subnet (AZ1)"
            },
            "vpc_id": "vpc-04c3b495832c44693"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356933967075:subnet/subnet-0d4ec10fcc21b8040",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.21.0/24",
            "id": "subnet-0d4ec10fcc21b8040",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "356933967075",
            "tags": {
              "Name": "Petclinic Private Subnet (AZ2)"
            },
            "tags_all": {
              "Name": "Petclinic Private Subnet (AZ2)"
            },
            "vpc_id": "vpc-04c3b495832c44693"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356933967075:subnet/subnet-0df86c6432ab2d41f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-0df86c6432ab2d41f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "356933967075",
            "tags": {
              "Name": "Petclinic Public Subnet (AZ1)"
            },
            "tags_all": {
              "Name": "Petclinic Public Subnet (AZ1)"
            },
            "vpc_id": "vpc-04c3b495832c44693"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356933967075:subnet/subnet-0e51df15c94ab90f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-0e51df15c94ab90f4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "356933967075",
            "tags": {
              "Name": "Petclinic Public Subnet (AZ2)"
            },
            "tags_all": {
              "Name": "Petclinic Public Subnet (AZ2)"
            },
            "vpc_id": "vpc-04c3b495832c44693"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356933967075:vpc/vpc-04c3b495832c44693",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0898fd6de337ad5a8",
            "default_route_table_id": "rtb-0cbc09645bcfb8b02",
            "default_security_group_id": "sg-032765b4b72826ff5",
            "dhcp_options_id": "dopt-040c24a7651d3632f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04c3b495832c44693",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cbc09645bcfb8b02",
            "owner_id": "356933967075",
            "tags": {
              "Name": "Petclinic_VPC"
            },
            "tags_all": {
              "Name": "Petclinic_VPC"
            }
          }
        }
      ]
    }
  ]
}